--- a/typescript-server-sdk/package.json
+++ b/typescript-server-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hathora/server-sdk",
-  "version": "0.5.1",
+  "version": "1.0.0-beta1",
   "type": "module",
   "main": "lib/server.js",
   "types": "lib/server.d.ts",
@@ -26,9 +26,11 @@
     "networking"
   ],
   "dependencies": {
+    "jsonwebtoken": "^9.0.0",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.19.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.0.3",
     "typescript": "^4.7.4"
   }
