--- a/typescript-client-sdk/package.json
+++ b/typescript-client-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hathora/client-sdk",
-  "version": "1.0.0-beta17",
+  "version": "1.0.0",
   "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
