--- a/typescript-server-sdk/package.json
+++ b/typescript-server-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hathora/server-sdk",
-  "version": "1.0.0-beta3",
+  "version": "1.0.0",
   "type": "module",
   "main": "lib/server.js",
   "types": "lib/server.d.ts",
