--- a/.github/workflows/typescript-client-sdk.yml
+++ b/.github/workflows/typescript-client-sdk.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: node_modules
-          key: node_modules-${{ hashFiles('package-lock.json') }}
+          key: node_modules-${{ hashFiles('package.json') }}
       - run: npm install
       - run: npx prettier --check .
